fix: add grid spacing and documentation (#80)

--- a/src/less/grids.less
+++ b/src/less/grids.less
@@ -289,6 +289,11 @@
 //
 // Style guide: grids.media
 
+//  Variables
+// ==================================================================
+
+@grid-spacing: @space-8;
+
 // ==================================================================
 //  Grid
 // ==================================================================
@@ -563,6 +568,57 @@
 
 [pam-Grid][pam-Grid-Control~="direction:column-reverse"] {
     flex-direction: column-reverse;
+}
+
+// Spacing
+//
+// Use `pam-Grid-Control="[space-x|space-y]"`
+// to control the spacing of the grid.
+//
+// Spacing size can be customize by variable `@grid-spacing`.
+//
+// Markup:
+// <div pam-Grid pam-Grid-Control="space-x">
+//     <div pam-Unit="1-3">
+//         <div pam-Unit-Test>Space X</div>
+//     </div>
+//     <div pam-Unit="1-3">
+//         <div pam-Unit-Test>Space X</div>
+//     </div>
+//     <div pam-Unit="1-3">
+//         <div pam-Unit-Test>Space X</div>
+//     </div>
+// </div>
+// <div pam-Grid pam-Grid-Control="space-y">
+//     <div pam-Unit="1-1">
+//         <div pam-Unit-Test>Space Y</div>
+//     </div>
+//     <div pam-Unit="1-1">
+//         <div pam-Unit-Test>Space Y</div>
+//     </div>
+//     <div pam-Unit="1-1">
+//         <div pam-Unit-Test>Space Y</div>
+//     </div>
+// </div>
+//
+// Weight: 1
+//
+// Style guide: grids.controls.spacing
+
+[pam-Grid][pam-Grid-Control~="space-x"] {
+    margin: 0 -@grid-spacing / 2;
+
+    & > [pam-Unit] {
+        padding: 0 @grid-spacing / 2;
+    }
+}
+
+[pam-Grid][pam-Grid-Control~="space-y"] {
+    margin-bottom: -@grid-spacing;
+
+    & > [pam-Unit] {
+        padding-bottom: @grid-spacing;
+    }
 }
 
 // Wrap
